# pgrind

./: .dockerignore  .env.local  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  fly.toml  justfile  manage.py  pyproject.toml  requirements.txt
paper_questions/: apps.py  models.py  urls.py  views.py
paper_questions/management/commands/: collectstatic.py
paper_questions/migrations/: 0001_initial.py  0002_alter_problemattempt_confidence_and_more.py  0002_rename_problem_id_problemattempt_question_and_more.py  0003_rename_problemattempt_staticfileproblemattempt.py
paper_questions/models/: Problem.py  ProblemAttempt.py  StaticFileProblem.py  StaticFileProblemAttempt.py  Subject.py  __init__.py
paper_questions/templates/paper_questions/: base.html  (+5 more)
paper_questions/tests/: conftest.py  test_models.py  test_views.py
paper_questions/views/: __init__.py  attempt.py  custom_study.py  error.py  home.py  question.py  random_question.py  solution.py
pgrind/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
pgrind/forms/: attempt_form.py  single_problem_upload_form.py
pgrind/migrations/: 0001_initial.py  0002_problem.py  0003_subject_attempt_alter_problem_subject.py  0004_remove_problem_question_file_and_more.py  0005_subject_name.py
pgrind/models/: attempt.py  problem.py  static_file_problem_attempt.py  subject.py
pgrind/settings/: base.py
pgrind/views/: __init__.py  attempt.py  custom_study.py  error.py  home.py  question.py  random_question.py  solution.py  upload.py
zackads/: asgi.py  urls.py  wsgi.py
zackads/settings/: base.py  dev.py  prod.py
(+16 files in other folders)
