[project]
name = "zackads"
version = "0.1.0"
description = "My personal site and side projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-watcher>=0.4.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "zackads.settings.dev"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.pytest-watcher]
now = true
clear = true
delay = 0.2
runner = "pytest"
patterns = ["*.py", "*.html"]
ignore_patterns = []
